fix: add spacing on dialog element on mobile viewport

--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ img {
 #dialog {
   max-width: 700px;
   max-height: 160px;
-  width: 100%;
+  width: calc(100% - 24px);
   height: 100%;
   padding: 0;
   border-radius: 6px;
